force-app/main/default/objects/Snowflake_Feed__c/Snowflake_Feed__c.object-meta.xml
<CustomObject>
    <description>SOX object - Stores cluster usage which is pushed via Mulesoft to SFDC.</description>
    <label>Snowflake Feed</label>
    <nameField>
        <displayFormat>Snowflake Feed - {0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snowflake Feeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>