force-app/main/default/objects/Snowflake_Feed__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Snowflake Feeds</relationshipLabel>
    <relationshipName>Snowflake_Feeds</relationshipName>
    <type>Lookup</type>
</CustomField>