force-app/main/default/objects/Snowflake_Feed__c/fields/Appliance_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Serial_Number__c</fullName>
    <label>Appliance Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>