force-app/main/default/objects/Snowflake_Feed__c/fields/Cluster_Usage_BETB__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Usage_BETB__c</fullName>
    <label>Cluster Usage (BETB)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>