force-app/main/default/objects/Snowflake_Feed__c/fields/Cluster_Usage_Considered__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Usage_Considered__c</fullName>
    <formula>IF( 
  Is_UCL__c, 
  Cluster_Usage_FETB__c,  
  IF( 
    ISPICKVAL(Original_Order__r.Metering__c, &apos;FETB&apos;),
    Cluster_Usage_FETB__c,
    Cluster_Usage_BETB__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cluster Usage Considered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>