force-app/main/default/objects/Snowflake_Feed__c/fields/Is_UCL__c.field-meta.xml
<CustomField>
    <fullName>Is_UCL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is UCL?</label>
    <type>Checkbox</type>
</CustomField>