force-app/main/default/objects/Snowflake_Feed__c/fields/License_Name__c.field-meta.xml
<CustomField>
    <fullName>License_Name__c</fullName>
    <formula>Scale_Utility_Overage_ID__r.Reserve_Order_Line__r.Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Name</label>
    <type>Text</type>
</CustomField>