force-app/main/default/objects/Snowflake_Feed__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Snowflake</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
                <default>true</default>
                <label>SFDC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>