force-app/main/default/objects/Snowflake_Feed__c/fields/Original_Order__c.field-meta.xml
<CustomField>
    <fullName>Original_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Snowflake Feeds</relationshipLabel>
    <relationshipName>Snowflake_Feeds</relationshipName>
    <type>Lookup</type>
</CustomField>