force-app/main/default/objects/Snowflake_Feed__c/fields/Overage_Order__c.field-meta.xml
<CustomField>
    <fullName>Overage_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overage Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Snowflake Feeds1</relationshipLabel>
    <relationshipName>Snowflake_Feeds1</relationshipName>
    <type>Lookup</type>
</CustomField>