force-app/main/default/objects/Snowflake_Feed__c/fields/Scale_Utility_Overage_ID__c.field-meta.xml
<CustomField>
    <fullName>Scale_Utility_Overage_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scale Utility Overage ID</label>
    <referenceTo>Scale_Utility_Overage__c</referenceTo>
    <relationshipLabel>Snowflake Feeds</relationshipLabel>
    <relationshipName>Snowflake_Feeds</relationshipName>
    <type>Lookup</type>
</CustomField>