force-app/main/default/objects/Snowflake_Feed__c/fields/Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Snowflake Feeds</relationshipLabel>
    <relationshipName>Snowflake_Feeds</relationshipName>
    <type>Lookup</type>
</CustomField>