force-app/main/default/objects/Snowflake_Feed__c/fields/Snowflake_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Snowflake_External_ID__c</fullName>
    <description>This is an external id coming from the snowflake. We don&apos;t use it but integration team.</description>
    <externalId>true</externalId>
    <label>Snowflake&apos;s ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>