force-app/main/default/objects/Snowflake_Feed__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cluster</fullName>
            </value>
            <value>
                <fullName>CNP</fullName>
                <default>true</default>
                <label>CNP</label>
            </value>
            <value>
                <fullName>M365H</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>