force-app/main/default/objects/Snowflake_Feed__c/validationRules/Donot_Update_SnowFlake_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Donot_Update_SnowFlake_Fields</fullName>
    <active>true</active>
    <description>This Validation Rule is to restrict the user to Update Cluster and Origin Fields On Update.</description>
    <errorConditionFormula>AND(!ISNEW(), OR( ISCHANGED(Origin__c),ISCHANGED( Type__c )))</errorConditionFormula>
    <errorMessage>Please Donot Update Type And Origin</errorMessage>
</ValidationRule>