force-app/main/default/objects/Snowflake_Feed__c/validationRules/Snowflake_Feed_Access_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Snowflake_Feed_Access_Restriction</fullName>
    <active>true</active>
    <description>Order Fulfilment related records are not to edit</description>
    <errorConditionFormula>AND(
NOT($Permission.Scale_Utility_Overage_ProdOps_Edit_Access),
NOT(ISNEW()),
$User.Alias &lt;&gt; &apos;autoproc&apos;,
NOT(INCLUDES($User.RBAC_Group__c, &apos;API&apos;)),
NOT(INCLUDES($User.RBAC_Group__c, &apos;IT System Admin&apos;)),
NOT(INCLUDES($User.RBAC_Group__c, &apos;IT Prod Ops Support&apos;)),
NOT(INCLUDES($User.RBAC_Group__c, &apos;System - IT&apos;)),
ISPICKVAL(Original_Order__r.Order_Status__c , &apos;Shipped&apos;)
)</errorConditionFormula>
    <errorMessage>You aren’t authorized to Edit Snowflake Feeds, hence please create a support ticket with ProdOps Support or email ProdOpsapps@rubrik.com” with details</errorMessage>
</ValidationRule>