force-app/main/default/objects/Snowflake_Feed__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_ID__c</columns>
    <columns>Snapshot_Date__c</columns>
    <columns>Scale_Utility_Overage_ID__c</columns>
    <columns>Original_Order__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Cluster_UUID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>